MNEMOSYNE 2.0

(Note that for Windows users we recommend uninstalling the previous
version before doing an upgrade.)

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your 
old data as xml. After upgrade, create a new database and import the old data
from the xml file.
	
MNEMOSYNE 1.1 : 2008-07-26

-Added statistics for the current card to the statistics window.
-More features for plugin writers. Arbitrary code can now be run after the
 database is loaded, as well as code to intercept and modify question and
 answer strings before they are displayed. There is a plugin directory in
 the source distribution with examples, e.g. to activate all the categories
 on startup, or to add the last grade to the answer text, or to add a new
 import file format (CSV in this case), or to create custom tags and run
 its contents in an external program.
-New cards can either be learned in random order or in the order that they 
 were added (configurable through the GUI).
-Prioritise cards forgotten during the review over cards which have not yet 
 been committed to long-term memory.
-Improved scheduling of overdue cards, by placing those with a shorter 
 interval first. Being a day late on an interval of 2 could be much worse 
 than being a day late on an interval of 50.
-Fix some keyboard shortcut quirks (reported by Stephen Boulet and varkhan1).
-Removed pyxml dependency. This fixes the "'module' object has no attribute
 'DefaultHandler'" error message on Ubuntu (Albert Damen).
-Hebrew translation by Michal T.
-Updated Japanese translation by Patrick Kenny.
	

	
MNEMOSYNE 1.0.2 : 2008-07-10

-Added import/export support for CueCard wcu files (Chris Aakre).
-Added features to improve display of map cards from svgtoquiz (Timothy 
 Bourke).
-Added support for Mac installer through py2app (Konrad Wojas).
-On OSX, Mnemosyne now stores its data in Library/Mnemosyne (Konrad Wojas).